# Onyx-Hydra-Renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: USDPluginTools.cmake
src/: CMakeLists.txt  main.cpp
src/GUI/: CMakeLists.txt
src/GUI/include/: Window.h
src/GUI/include/Views/: HydraRenderView.h  MenuView.h  View.h
src/GUI/src/: Window.cpp
src/GUI/src/Views/: HydraRenderView.cpp  MenuView.cpp
src/OnyxRenderer/: CMakeLists.txt
src/OnyxRenderer/include/: DiffuseMaterial.h  Integrator.h  Material.h  OnyxHelper.h  OnyxPathtracingIntegrator.h  OnyxRenderer.h  RenderArgument.h
src/OnyxRenderer/src/: DiffuseMaterial.cpp  OnyxHelper.cpp  OnyxPathtracingIntegrator.cpp  OnyxRenderer.cpp
src/hdOnyx/: CMakeLists.txt  plugInfo.json
src/hdOnyx/include/: light.h  material.h  mesh.h  renderBuffer.h  renderDelegate.h  renderParam.h  renderPass.h  rendererPlugin.h
src/hdOnyx/src/: light.cpp  material.cpp  mesh.cpp  renderBuffer.cpp  renderDelegate.cpp  renderPass.cpp  rendererPlugin.cpp
